--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     <table>
       <tr>
         <th>
-          <img src="Pictures/Donut ride.gif" alt="" id="donut_ride">
+          <img src="https://www.dropbox.com/scl/fi/bmc4dpjq4zrvgl7n6h7im/Donut-ride.gif?rlkey=w0lihq85err94089755vofr0w&st=mi8g1z6d&raw=1" alt="" id="donut_ride">
           <!--<video src="Pictures/Mage room 2.mp4" id="mage_room" loop autoplay></video>-->
         </th>
       </tr>
@@ -387,3 +387,4 @@
     <script src="homepage.js"></script>
   </body>
 </html>
+
