--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TheVanillaLog</title>
-    <link rel="stylesheet" href="./newhome.css" />
+    <link rel="stylesheet" href="/vanillalogwebsite/newhome.css" />
     <!--Do not forget to paste this script for the guestbook on the header-->
     <script src="https://iframe.chat/scripts/main.min.js"></script>
     <style>
@@ -387,5 +387,6 @@
     <script src="homepage.js"></script>
   </body>
 </html>
+
 
 
