--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               ><button class="webpage_buttons">
                 <img
                   class="button_images"
-                  src="/Pictures/art.png"
+                  src="Pictures/art.png"
                   alt=""
                 /></button
             ></a>
@@ -35,7 +35,7 @@
               ><button class="webpage_buttons">
                 <img
                   class="button_images"
-                  src="/Pictures/music.png"
+                  src="Pictures/music.png"
                   alt=""
                 /></button
             ></a>
@@ -51,7 +51,7 @@
               ><button class="webpage_buttons">
                 <img
                   class="button_images"
-                  src="/Pictures/coding.png"
+                  src="Pictures/coding.png"
                   alt=""
                 /></button
             ></a>
@@ -387,6 +387,7 @@
     <script src="homepage.js"></script>
   </body>
 </html>
+
 
 
 
