--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               ><button class="webpage_buttons">
                 <img
                   class="button_images"
-                  src="/Pictures/blog.png"
+                  src="Pictures/blog.png"
                   alt=""
                 /></button
             ></a>
@@ -384,6 +384,7 @@
     <script src="homepage.js"></script>
   </body>
 </html>
+
 
 
 
