--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <tr>
         <th id="row">
           <a href="index.html">
-            <img class="logo" src="/Pictures/thevanillalog3.png" alt="" />
+            <img class="logo" src="Pictures/thevanillalog3.png" alt="" />
           </a>
         </th>
       </tr>
@@ -384,6 +384,7 @@
     <script src="homepage.js"></script>
   </body>
 </html>
+
 
 
 
